--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "homepage": ".",
+  "proxy": "https://localhost:4000",
   "name": "ott-rentals",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "bootstrap": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
@@ -31,8 +33,8 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
