--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": ".",
-  "proxy": "https://localhost:4000",
+  "proxy": "http://localhost:4000/",
   "name": "ott-rentals",
   "version": "0.1.0",
   "private": true,
