--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.2",
+    "mongoose": "^6.1.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.15"
   }
 }
